# football-data-sdk

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
football_data/: __init__.py  client.py
football_data/endpoints/: areas.py  competitions.py  matches.py  persons.py  standings.py  teams.py
football_data/models/: area.py  coach.py  competition.py  match.py  person.py  player.py  score.py  season.py  standings.py  team.py
tests/: test_competitions.py
